--- a/Experiment of programming/Project4(Wordhen)/Wordhen/learn.ui
+++ b/Experiment of programming/Project4(Wordhen)/Wordhen/learn.ui
@@ -6,9 +6,21 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>418</height>
+    <width>392</width>
+    <height>615</height>
    </rect>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>392</width>
+    <height>615</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>392</width>
+    <height>615</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>Form</string>
@@ -18,7 +30,7 @@
     <rect>
      <x>10</x>
      <y>10</y>
-     <width>117</width>
+     <width>61</width>
      <height>23</height>
     </rect>
    </property>
@@ -147,16 +159,6 @@ QCheckBox:enabled:!checked{
       </property>
       <property name="text">
        <string/>
-      </property>
-     </widget>
-    </item>
-    <item>
-     <widget class="QLabel" name="label">
-      <property name="text">
-       <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:11pt;&quot;&gt;Learning&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-      </property>
-      <property name="alignment">
-       <set>Qt::AlignCenter</set>
       </property>
      </widget>
     </item>
